# FastICLE

./: .gitignore  LICENSE.md  Makefile  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/: icle.py  step_identifier.py  task.py
src/assembler/: core.py  prompts.py
src/campus/: campus.py  campus_agent.py  core.py  prompts.py  reward_agent.py
src/campus/models/: agent_config.py  expert_config.py  reward_output.py
src/caster/: caster.py  core.py  prompts.py
src/caster/models/: caster_output.py  caster_task_list.py
src/dispatcher/: core.py
src/fasticle/: __init__.py  log_setup.py
src/fasticle/assembler/: core.py
src/fasticle/campus/: core.py
src/fasticle/caster/: core.py
src/fasticle/dispatcher/: core.py  prompts.py
src/fasticle/runtime/: core.py  prompts.py
src/icle/campus/: core.py  prompts.py
src/icle/caster/: core.py  prompts.py
src/models/: tasks.py
src/runtime/: core.py
tests/: conftest.py
tests/assembler/: test_assembler.py
tests/campus/: campus_run_test.py  test_campus.py  test_expert_config.py  test_training_task_list.py
tests/caster/: caster_instance_test.py  caster_run_test.py  test_caster_instance.py  test_caster_prompts.py
tests/dispatcher/: dispatcher_instance_test.py  dispatcher_run_test.py  test_dispatcher_prompts.py
tests/fasticle/: icle_run_test.py  test_used_experts.py  test_verbose_logging.py
tests/icle/: icle_run_test.py
tests/meta/: global_data_test.py
tests/models/: test_step_identifier.py  test_tasks.py
tests/runtime/: runtime_parallel_test.py  test_runtime.py
(+14 files in other folders)
